--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,19198],[],[[4,0,0,[],[1,909,18286],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,9347],[],[[5,0,0,[],[0,420,8924,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*c:\\Users\\Chafik\\Desktop\\robotframworkPOM\\TestCases\\LoginTest.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1nfOSEzLzNZ3SS3OLskv0C/KT8ovSStKzC3PL8oO8PfVD0ktLnFOLE4t1vfJT8/MA3H1wIqU7Khnlo1+oh0AaSI6eg==","*Login Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ScriptrobotcorderDemo","*c:\\Users\\Chafik\\Desktop\\robotframworkPOM\\TestCases\\ScriptrobotcorderDemo.robot","eNq1zMEJgDAMRuFVxAH876K91KsoqANETbFUiSQF1xfcweODj9dQcSiHtgzx5BqAr7EYq8EfFGJCx5ay3FBZJQel6xFN49BjZsuejA3TpvHOH9hEd9aOL6m+Lt0/3wbkXq2ARIY=","*<p>A test suite with a single test for OrangeHRM Created by hats' Robotcorder\x3c/p>","*OrangeHRM test","*Element with locator '//i[@class=\"oxd-icon bi-caret-down-fill oxd-userdropdown-icon\"]' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"ScriptrobotcorderDemo","name":"ScriptrobotcorderDemo","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1668812038255;
+window.output["baseMillis"] = 1669242585347;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 19210;
+window.output["generated"] = 9361;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
